[package]
name = "remodex-relay"
version = "0.0.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
reqwest = { version = "0.12", features = ["json", "http2", "rustls-tls"], default-features = false }
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing"] }
base64 = "0.22"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dashmap = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
